fix: Layout bugs

--- a/src/app/components/side-menu/side-menu.component.css
+++ b/src/app/components/side-menu/side-menu.component.css
@@ -57,10 +57,7 @@
 }
 
 #logout-button, #send-test-button {
-    position: absolute;
-    top: calc(80% - 100px);
-    left: 50%;
-    transform: translateX(-50%);
+   margin-top: 100px;
 }
 
 
